회원 가입 이메일 인증 구현 작성

--- a/src/main/resources/messages/commons.properties
+++ b/src/main/resources/messages/commons.properties
@@ -10,3 +10,7 @@
 회원가입_약관에_동의합니다.=회원가입 약관에 동의합니다.
 로그인=로그인
 LOGIN_MSG={0}({1})님 로그인
+
+인증하기=인증하기
+Email.verification.subject=회원가입 이메일 인증메일 입니다.
+Email.verification.message=발급된 인증코드를 회원가입 항목에 입력하세요.
