--- a/src/main/resources/messages/commons.properties
+++ b/src/main/resources/messages/commons.properties
@@ -18,3 +18,5 @@ LOGIN_MSG={0}({1})님 로그인
 확인된_이메일_입니다.=확인된 이메일 입니다.
 Email.verification.subject=회원가입 이메일 인증메일 입니다.
 Email.verification.message=발급된 인증코드를 회원가입 항목에 입력하세요.
+
+비밀번호_찾기=비밀번호_찾기
