비밀번호 초기화 작성 완료

--- a/src/main/resources/messages/errors.properties
+++ b/src/main/resources/messages/errors.properties
@@ -2,3 +2,4 @@ Fail.login=아이디 또는 비밀번호가 일치하지 않습니다.
 NotFound.file=파일을 찾을수 없습니다.
 Not.your.file=파일 소유자가 아닙니다.
 UnAuthorized=접근 권한이 없습니다.
+NotFound.member=가입되지 않은 회원입니다.
