--- a/src/main/resources/messages/commons.properties
+++ b/src/main/resources/messages/commons.properties
@@ -19,4 +19,6 @@ LOGIN_MSG={0}({1})님 로그인
 Email.verification.subject=회원가입 이메일 인증메일 입니다.
 Email.verification.message=발급된 인증코드를 회원가입 항목에 입력하세요.
 
-비밀번호_찾기=비밀번호_찾기
+비밀번호_찾기=비밀번호 찾기
+비밀번호를_가입하신_이메일로_전송하였습니다.=비밀번호를 가입하신 이메일로 전송하였습니다.
+Email.password.reset=비밀번호 초기화 안내입니다.
