--- a/src/main/resources/messages/validations.properties
+++ b/src/main/resources/messages/validations.properties
@@ -15,3 +15,6 @@ Duplicated.requestJoin.userId=이미 가입된 아이디 입니다.
 Duplicated.requestJoin.email=이미 가입된 이메일 입니다.
 Complexity.requestJoin.password=비밀번호는 대소문자 각각 알파벳 1자 이상, 숫자 1자 이상, 특수문자 1자 이상을 포함해야 합니다.
 Mismatch.password=비밀번호가 일치하지 않습니다.
+
+# 비밀번호 찾기
+NotBlank.requestFindPw.name=회원명을 입력하세요.
