--- a/src/main/resources/messages/commons.properties
+++ b/src/main/resources/messages/commons.properties
@@ -29,3 +29,15 @@ Email.password.reset=비밀번호 초기화 안내입니다.
 우편번호=우편번호
 나머지_주소=나머지 주소
 주소_찾기=주소 찾기
+
+# 달력 공통 
+일=일
+월=월
+화=화
+수=수
+목=목
+금=금
+토=토
+이전달=이전달
+다음달=다음달
+년=년
