쇼핑몰 - 상품 분류 작성 중

--- a/src/main/resources/messages/validations.properties
+++ b/src/main/resources/messages/validations.properties
@@ -19,3 +19,8 @@ Required.verified.email=이메일 인증이 필요합니다.
 
 # 비밀번호 찾기
 NotBlank.requestFindPw.name=회원명을 입력하세요.
+
+# 관리자 - 상품 - 카테고리
+NotBlank.requestCategory.cateCd=분류코드를 입력하세요.
+NotBlank.requestCategory.cateNm=분류명을 입력하세요.
+Duplicated.requestCategory.cateCd=이미 등록된 분류코드 입니다.
