상품 등록, 수정 처리

--- a/src/main/resources/messages/commons.properties
+++ b/src/main/resources/messages/commons.properties
@@ -47,3 +47,9 @@ Email.password.reset=비밀번호 초기화 안내입니다.
 이전=이전
 다음=다음
 마지막=마지막
+
+
+# 상품 상태
+ProductStatus.SALE=판매중
+ProductStatus.OUT_OF_STOCK=품절
+ProductStatus.PREPARE=상품준비중
