--- a/src/main/resources/messages/validations.properties
+++ b/src/main/resources/messages/validations.properties
@@ -24,3 +24,7 @@ NotBlank.requestFindPw.name=회원명을 입력하세요.
 NotBlank.requestCategory.cateCd=분류코드를 입력하세요.
 NotBlank.requestCategory.cateNm=분류명을 입력하세요.
 Duplicated.requestCategory.cateCd=이미 등록된 분류코드 입니다.
+
+#관리자 - 상품 - 등록/수정
+NotBlank.requestProduct.cateCd=분류코드를 선택하세요.
+NotBlank.requestProduct.name=상품명을 입력하세요.
