상품 목록 구현 중

--- a/src/main/resources/messages/commons.properties
+++ b/src/main/resources/messages/commons.properties
@@ -53,3 +53,5 @@ Email.password.reset=비밀번호 초기화 안내입니다.
 ProductStatus.SALE=판매중
 ProductStatus.OUT_OF_STOCK=품절
 ProductStatus.PREPARE=상품준비중
+조회된_상품이_없습니다.=조회된 상품이 없습니다.
+원=원
