상품 상세 구현 중

--- a/src/main/resources/messages/commons.properties
+++ b/src/main/resources/messages/commons.properties
@@ -55,3 +55,21 @@ ProductStatus.OUT_OF_STOCK=품절
 ProductStatus.PREPARE=상품준비중
 조회된_상품이_없습니다.=조회된 상품이 없습니다.
 원=원
+
+# 사용자 - 상품 상세
+소비자가=소비자가
+판매가=판매가
+할인가=할인가
+배송=배송
+개별배송=개별배송
+묶음배송=묶음배송
+배송비=배송비
+무료배송=무료배송
+총_상품금액=총 상품금액
+찜하기=찜하기
+장바구니=장바구니
+구매하기=구매하기
+상세=상세
+후기=후기
+문의=문의
+배송_교환반품=배송/교환반품
