장바구니 처리

--- a/src/main/resources/messages/commons.properties
+++ b/src/main/resources/messages/commons.properties
@@ -96,3 +96,13 @@ ProductStatus.PREPARE=상품준비중
 요리_분류=요리 분류
 요리_종류=요리 종류
 추가=추가
+
+# 사용자 - 장바구니
+상품정보=상품정보
+상품가=상품가
+수량=수량
+합계=합계
+할인=할인
+상품합계=상품합계
+할인합계=할인합계
+결제금액=결제금액
