--- a/src/main/resources/messages/validations.properties
+++ b/src/main/resources/messages/validations.properties
@@ -31,3 +31,13 @@ NotBlank.requestProduct.name=상품명을 입력하세요.
 
 # 사용자 - 장바구니
 상품을_선택_하세요.=상품을 선택 하세요.
+
+# 주문서
+NotBlank.requestOrder.orderName=주문자명을 입력하세요.
+NotBlank.requestOrder.orderCellPhone=주문자 휴대전화번호를 입력하세요.
+NotBlank.requestOrder.orderEmail=주문자 이메일을 입력하세요.
+NotBlank.requestOrder.receiverName=받는분 이름을 입력하세요.
+NotBlank.requestOrder.receiverCellPhone=받는분 휴대전화 번호를 입력하세요.
+NotBlank.requestOrder.zonecode=우편번호를 입력하세요.
+NotBlank.requestOrder.address=주소를 입력하세요.
+NotBlank.requestOrder.payType=결제 수단을 선택하세요.
