--- a/src/main/resources/messages/errors.properties
+++ b/src/main/resources/messages/errors.properties
@@ -7,3 +7,4 @@ NotFound.member=가입되지 않은 회원입니다.
 NotFound.product.category=등록된 분류가 아닙니다.
 NotFound.product=등록된 상품이 아닙니다.
 NotFound.order=주문을 찾을 수 없습니다.
+NotFound.recipe=레서피를 찾을 수 없습니다.
