--- a/src/main/resources/messages/errors.properties
+++ b/src/main/resources/messages/errors.properties
@@ -8,3 +8,6 @@ NotFound.product.category=등록된 분류가 아닙니다.
 NotFound.product=등록된 상품이 아닙니다.
 NotFound.order=주문을 찾을 수 없습니다.
 NotFound.recipe=레서피를 찾을 수 없습니다.
+
+NotFound.bannerGroup=등록되지 않은 배너그룹입니다.
+NotFound.banner=등록되지 않은 배너입니다.
